test pushing to vercel

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@ window.addEventListener("load", () => {
 	<p>
 		Currently a W.I.P. Send any server suggestions to OrangeMan
 	</p>
+	<p>
+		test push to vercel
+	</p>
 	<div id="embed"></div>
 </center>
 </body>
