--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 		window.addEventListener("load", () => {
 			new ServerEmbed(document.getElementById("embed"), "40%").ping("ep.rufan.tech");
 		});
+			new ServerEmbed(document.getElementById("embed"), "40%").ping("sus.shhnowisnottheti.me");
+		});
 		window.addEventListener("load", () => {
 			new ServerEmbed(document.getElementById("embed"), "40%").ping("intelle.cloud/soccer");
 		});
