I tested my code before pushing to GitHub this time!

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		window.addEventListener("load", () => {
 			new ServerEmbed(document.getElementById("embed"), "40%").ping("ep.rufan.tech");
 		});
+		window.addEventListener("load", () => {
 			new ServerEmbed(document.getElementById("embed"), "40%").ping("sus.shhnowisnottheti.me");
 		});
 		window.addEventListener("load", () => {
